--- a/DATA_CONTRACTS/URL/URL.yaml
+++ b/DATA_CONTRACTS/URL/URL.yaml
@@ -4,7 +4,7 @@ domainOwner: Alexis Zecharies
 domainOwnerEmail: alexis.zecharies@revance.com
 partionedOn: URL
 quantumName: url quantum
-usagePurpose: Inventory; Analytical
+usagePurpose: To keep inventory of urls that belong to practices, as well as track how relevant these urls and associated practices are using custom scoring.
 description: Tables and attributes related to URLs. Urls are tools for marketing used by only a subset of practices. Some use multiple urls.
 limitations: Financial Reporting; Any other uses that require  1 on 1 accuracy, since one practice can have many urls.
 version: 0.0.1
